objects/ssot__PartyConsent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ConsentCapturedContactPointType__c</fullName>
        <label>Consent Captured Contact Point Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedDateTime__c</fullName>
        <label>Consent Captured Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedSourceName__c</fullName>
        <label>Consent Captured Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedSource__c</fullName>
        <label>Consent Captured Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentGrantors__c</fullName>
        <label>ConsentGrantors relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentStatusId__c</fullName>
        <label>Consent Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Privacy Consent Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrivacyConsentStatusId__c</fullName>
        <label>Privacy Consent Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>